install pandas in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -102,6 +102,8 @@ before_install:
 
 install:
   - mvn $BUILD_FLAG $MODULES $PROFILE -B
+  - pip install --user -U pip
+  - pip install --user pandas
 
 before_script:
   - if [[ -n $SPARK_VER ]]; then travis_retry ./testing/downloadSpark.sh $SPARK_VER $HADOOP_VER; fi
