fix: ignore all rules

--- a/zeppelin-web/.eslintrc
+++ b/zeppelin-web/.eslintrc
@@ -31,6 +31,44 @@
     "process": false
   },
   "rules": {
+    "yoda": 0,
+    "no-mixed-spaces-and-tabs": 0,
+    "semi-spacing": 0,
+    "no-tabs": 0,
+    "no-extra-boolean-cast": 0,
+    "object-property-newline": 0,
+    "dot-location": 0,
+    "brace-style": 0,
+    "one-var": 0,
+    "prefer-rest-params": 0,
+    "no-useless-constructor": 0,
+    "no-multi-spaces": 0,
+    "no-unused-expressions": 0,
+    "space-infix-ops": 0,
+    "no-empty": 0,
+    "operator-linebreak": 0,
+    "prefer-spread": 0,
+    "space-before-blocks": 0,
+    "space-in-parens": 0,
+    "keyword-spacing": 0,
+    "no-redeclare": 0,
+    "standard/object-curly-even-spacing": 0,
+    "comma-spacing": 0,
+    "no-eval": 0,
+    "no-extra-semi": 0,
+    "arrow-parens": 0,
+    "spaced-comment": 0,
+    "block-spacing": 0,
+    "no-unneeded-ternary": 0,
+    "no-multiple-empty-lines": 0,
+    "no-trailing-spaces": 0,
+    "padded-blocks": 0,
+    "indent": 0,
+    "no-var": 0,
+    "space-before-function-paren": 0,
+    "object-curly-spacing": 0,
+    "comma-dangle": 0,
+    "semi": 0,
     "require-jsdoc": 0,
     "valid-jsdoc": 0,
     "no-invalid-this": 0,
