--- a/zeppelin-web/.eslintrc
+++ b/zeppelin-web/.eslintrc
@@ -32,6 +32,7 @@
   },
   "rules": {
     "semi": 0,
+    "space-before-function-paren": 0,
     "no-unneeded-ternary": 0,
     "comma-dangle": 0,
     "object-curly-spacing": 0,
