--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,8 @@
     <commons.cli.version>1.3.1</commons.cli.version>
     <shiro.version>1.3.2</shiro.version>
 
+    <hadoop.version>2.7.3</hadoop.version>
+
     <!-- test library versions -->
     <junit.version>4.12</junit.version>
     <mockito.version>1.10.19</mockito.version>
@@ -133,6 +135,7 @@
     <plugin.antrun.version>1.7</plugin.antrun.version>
     <plugin.download.version>1.3.0</plugin.download.version>
     <plugin.deploy.version>2.8.2</plugin.deploy.version>
+    <plugin.shade.version>2.3</plugin.shade.version>
 
     <PermGen>64m</PermGen>
     <MaxPermGen>512m</MaxPermGen>
@@ -261,6 +264,30 @@
         <groupId>org.apache.shiro</groupId>
         <artifactId>shiro-config-core</artifactId>
         <version>${shiro.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-yarn-client</artifactId>
+        <version>${hadoop.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-yarn-common</artifactId>
+        <version>${hadoop.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-yarn-api</artifactId>
+        <version>${hadoop.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-common</artifactId>
+        <version>${hadoop.version}</version>
       </dependency>
 
       <!-- Test libraries -->
@@ -1089,6 +1116,13 @@
         </plugin>
         </plugins>
       </build>
+    </profile>
+
+    <profile>
+      <id>yarn</id>
+      <modules>
+        <module>zeppelin-cluster/yarn</module>
+      </modules>
     </profile>
   </profiles>
 
