--- a/zeppelin-web/.eslintrc
+++ b/zeppelin-web/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "preset": "google",
+  "extends": ["eslint:recommended", "google", "standard"],
   "env": {
     "browser": true,
     "jasmine": true,
@@ -31,6 +31,20 @@
     "process": false
   },
   "rules": {
+    "array-bracket-spacing": 0,
+    "space-before-function-paren": 0,
+    "no-unneeded-ternary": 0,
+    "comma-dangle": 0,
+    "object-curly-spacing": 0,
+    "standard/object-curly-even-spacing": 0,
+    "arrow-parens": 0,
+    "require-jsdoc": 0,
+    "valid-jsdoc": 0,
+    "no-invalid-this": 0,
+    "no-console": 0,
+    "guard-for-in": 0,
+    "no-mixed-operators": 1,
+    "no-useless-escape": 1,
     "no-bitwise": 2,
     "camelcase": 2,
     "curly": 2,
