--- a/zeppelin-web/package.json
+++ b/zeppelin-web/package.json
@@ -9,7 +9,8 @@
     "clean": "rimraf dist && rimraf .tmp",
     "postinstall": "bower install --silent",
     "prebuild": "npm-run-all clean lint:once",
-    "build": "grunt pre-webpack-dist && webpack && grunt post-webpack-dist",
+    "build:dist": "grunt pre-webpack-dist && webpack && grunt post-webpack-dist",
+    "build:ci": "grunt pre-webpack-ci && webpack && grunt post-webpack-dist",
     "lint:watch": "esw --watch src",
     "lint:once": "eslint src",
     "predev": "grunt pre-webpack-dev",
