feat: Apply preset env to helium

--- a/zeppelin-zengine/src/main/resources/helium/package.json
+++ b/zeppelin-zengine/src/main/resources/helium/package.json
@@ -11,8 +11,7 @@ DEPENDENCIES
     "webpack": "^1.12.2",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0",
+    "babel-preset-env": "^1.4.0",
     "css-loader": "^0.26.2",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
