--- a/zeppelin-web/package.json
+++ b/zeppelin-web/package.json
@@ -23,7 +23,8 @@
   },
   "dependencies": {
     "grunt-angular-templates": "^0.5.7",
-    "grunt-dom-munger": "^3.4.0"
+    "grunt-dom-munger": "^3.4.0",
+    "headroom.js": "^0.9.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.4",
@@ -66,6 +67,7 @@
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "~2.0.0",
     "html-webpack-plugin": "^2.24.1",
+    "imports-loader": "^0.7.1",
     "jasmine-core": "^2.5.2",
     "karma": "~1.3.0",
     "karma-coverage": "^1.1.1",
