[ZEPPELIN-2438]: Add local winutils.exe in build and use if required on run.
The build of the spark dependencies now downloads winutils.exe and
installs it in interpreter/spark/winutils.
The zeppelin-env.cmd (only used if we run on windows) then checks if
HADOOP_HOME exists, if not, it will set it to point to winutils. This
is required to have the spark interpreter work in Windows.

In order to have this active, the zeppelin-env.cmd had to be removed
from the .gitignore.

--- a/spark-dependencies/pom.xml
+++ b/spark-dependencies/pom.xml
@@ -62,6 +62,9 @@
     <spark.bin.download.url>
       http://d3kbcqa49mib13.cloudfront.net/spark-${spark.version}-bin-without-hadoop.tgz
     </spark.bin.download.url>
+    <hadoop.winutils.bin.download.url>
+      https://github.com/steveloughran/winutils/raw/master/hadoop-2.7.1/bin/winutils.exe
+    </hadoop.winutils.bin.download.url>
     <spark.py4j.version>0.8.2.1</spark.py4j.version>
 
     <!--plugin versions-->
@@ -1023,6 +1026,54 @@
                   <directory>
                     ${project.build.directory}/spark-${spark.version}-bin-without-hadoop/R/lib
                   </directory>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <!-- include winutils by default -->
+      <plugin>
+        <groupId>com.googlecode.maven-download-plugin</groupId>
+        <artifactId>download-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>download-winutils</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>wget</goal>
+            </goals>
+            <configuration>
+              <readTimeOut>60000</readTimeOut>
+              <retries>5</retries>
+              <url>${hadoop.winutils.bin.download.url}</url>
+              <unpack>false</unpack>
+              <outputDirectory>${project.build.directory}</outputDirectory>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>2.7</version>
+        <executions>
+          <execution>
+            <id>copy-winutils</id>
+            <phase>generate-resources</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${project.build.directory}/../../interpreter/spark/winutils/bin</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>
+                    ${project.build.directory}
+                  </directory>
+                  <includes>
+                    <include>winutils.exe</include>
+                  </includes>
                 </resource>
               </resources>
             </configuration>
