--- a/zeppelin-web/package.json
+++ b/zeppelin-web/package.json
@@ -23,9 +23,12 @@
   },
   "dependencies": {
     "github-markdown-css": "2.6.0",
+    "angular-ui-grid": "^4.0.4",
     "grunt-angular-templates": "^0.5.7",
     "grunt-dom-munger": "^3.4.0",
-    "headroom.js": "^0.9.3"
+    "headroom.js": "^0.9.3",
+    "moment": "^2.18.1",
+    "moment-duration-format": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.4",
