--- a/zeppelin-web/package.json
+++ b/zeppelin-web/package.json
@@ -22,6 +22,7 @@
     "test": "karma start karma.conf.js"
   },
   "dependencies": {
+    "github-markdown-css": "2.6.0",
     "grunt-angular-templates": "^0.5.7",
     "grunt-dom-munger": "^3.4.0",
     "headroom.js": "^0.9.3"
