rollback javax.ws to 2.0-m10

--- a/zeppelin-interpreter/pom.xml
+++ b/zeppelin-interpreter/pom.xml
@@ -44,7 +44,7 @@
     <maven.aeither.provider.version>3.0.3</maven.aeither.provider.version>
     <wagon.version>1.0</wagon.version>
     <jline.version>2.12.1</jline.version>
-    <ws.rsapi.version>2.0</ws.rsapi.version>
+    <ws.rsapi.version>2.0-m10</ws.rsapi.version>
 
     <!--plugin versions-->
     <plugin.shade.version>2.3</plugin.shade.version>
