--- a/zeppelin-interpreter/pom.xml
+++ b/zeppelin-interpreter/pom.xml
@@ -44,7 +44,7 @@
     <maven.aeither.provider.version>3.0.3</maven.aeither.provider.version>
     <wagon.version>1.0</wagon.version>
     <jline.version>2.12.1</jline.version>
-    <ws.rsapi.version>2.0.1</ws.rsapi.version>
+    <ws.rsapi.version>2.0-m10</ws.rsapi.version>
 
     <!--plugin versions-->
     <plugin.shade.version>2.3</plugin.shade.version>
@@ -89,7 +89,7 @@
       <artifactId>javax.ws.rs-api</artifactId>
       <version>${ws.rsapi.version}</version>
     </dependency>
-    
+
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
