[ZEPPELIN-2519] Disable watchers not in viewport
### What is this PR for?
Currently all the watchers are enabled by default. I came across this github project https://github.com/wix/angular-viewport-watch to disable watchers not in viewport. This reduces number of watchers in notebooks with large number of paragraphs.

### What type of PR is it?
[Improvement]

### Todos

### What is the Jira issue?
https://issues.apache.org/jira/browse/ZEPPELIN-2519

### How should this be tested?
Outline the steps to test the PR here.

### Screenshots (if appropriate)

### Questions:
* Does the licenses files need update?
Not sure of this part. This is under MIT license. [Project link](https://github.com/wix/angular-viewport-watch)

* Is there breaking changes for older versions?
No

* Does this needs documentation?
No

Author: vipulm <vipulm@qubole.com>

Closes #2326 from vipul1409/ZEPPELIN-2519 and squashes the following commits:

497413b [vipulm] Fixing build issues
21c03d6 [vipulm] Merging master and resolving conflicts
b982db4 [vipulm] Trigger build
175dd17 [vipulm] Merge master
99b19a5 [vipulm] Move pacakg to npm
d698d06 [vipulm] Add license file
7142578 [vipulm] Trigger notification
329e33a [vipulm] Disable watchers not in viewport

--- a/zeppelin-web/package.json
+++ b/zeppelin-web/package.json
@@ -21,6 +21,7 @@
     "test": "karma start karma.conf.js"
   },
   "dependencies": {
+    "angular-viewport-watch": "github:shahata/angular-viewport-watch",
     "github-markdown-css": "2.6.0",
     "angular-ui-grid": "^4.0.4",
     "grunt-angular-templates": "^0.5.7",
