--- a/zeppelin-interpreter/pom.xml
+++ b/zeppelin-interpreter/pom.xml
@@ -45,6 +45,7 @@
     <wagon.version>1.0</wagon.version>
     <jline.version>2.12.1</jline.version>
     <ws.rsapi.version>2.0-m10</ws.rsapi.version>
+    <httpcomponents.client.version>4.3.6</httpcomponents.client.version>
 
     <!--plugin versions-->
     <plugin.shade.version>2.3</plugin.shade.version>
@@ -226,6 +227,12 @@
       <artifactId>guava</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>${httpcomponents.client.version}</version>
+    </dependency>
+    
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
