--- a/zeppelin-server/pom.xml
+++ b/zeppelin-server/pom.xml
@@ -116,16 +116,25 @@
     <dependency>
       <groupId>io.buji</groupId>
       <artifactId>buji-pac4j</artifactId>
+      <version>${buji.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.pac4j</groupId>
+          <artifactId>pac4j-core</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
       <groupId>org.pac4j</groupId>
       <artifactId>pac4j-core</artifactId>
+      <version>${pac4j.version}</version>
     </dependency>
 
     <dependency>
       <groupId>org.pac4j</groupId>
       <artifactId>pac4j-oidc</artifactId>
+      <version>${pac4j.version}</version>
       <exclusions>
         <exclusion>
           <groupId>org.apache.commons</groupId>
