[ZEPPELIN-2622] Add Zeppelin Git info REST API
### What is this PR for?
Added a new REST API that provides more detailed info. on the exact source code Git commit Id that created the build. Useful to track down bugs and replicate issues.

### What type of PR is it?
[Improvement]

### Todos
* [ ] - Add more Git properties

### What is the Jira issue?
* https://issues.apache.org/jira/browse/ZEPPELIN-2622

### How should this be tested?
Build Zeppelin. Open http://localhost:8080/api/git

### Screenshots (if appropriate)
Expected output: {"status":"OK","message":"Zeppelin Git info","body":{"commitId":"4c2d295","timestamp":"2017-06-06 19:00:01"}}

### Questions:
* Does the licenses files need update? N
* Is there breaking changes for older versions? N
* Does this needs documentation? Y (Done)

Author: Nelson Costa <nelson.costa85@gmail.com>

Closes #2398 from necosta/zeppelin2622 and squashes the following commits:

dc76a24 [Nelson Costa] [ZEPPELIN-2622] Keep 'About Zeppelin' window only displaying version
426b1ea [Nelson Costa] [ZEPPELIN-2622] Minor adjustments
2d20455 [Nelson Costa] [ZEPPELIN-2622] Merged version and git REST APIs
9ff7d60 [Nelson Costa] [ZEPPELIN-2622] Added missing license
75795f1 [Nelson Costa] [ZEPPELIN-2622] Add Zeppelin Git info REST API

--- a/pom.xml
+++ b/pom.xml
@@ -527,6 +527,27 @@
         <version>${plugin.deploy.version}</version>
       </plugin>
 
+      <plugin>
+        <groupId>pl.project13.maven</groupId>
+        <artifactId>git-commit-id-plugin</artifactId>
+        <version>2.2.2</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>revision</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <skipPoms>false</skipPoms>
+          <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
+          <generateGitPropertiesFile>true</generateGitPropertiesFile>
+          <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
+          <failOnNoGitDirectory>false</failOnNoGitDirectory>
+          <dateFormat>yyyy-MM-dd HH:mm:ss</dateFormat>
+        </configuration>
+      </plugin>
+
     <!--TODO(alex): make part of the build and reconcile conflicts
     <plugin>
       <groupId>com.ning.maven.plugins</groupId>
