--- a/zeppelin-cluster/yarn/pom.xml
+++ b/zeppelin-cluster/yarn/pom.xml
@@ -52,13 +52,11 @@
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-yarn-client</artifactId>
-      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-yarn-common</artifactId>
-      <scope>provided</scope>
       <exclusions>
         <exclusion>
           <groupId>org.codehaus.jackson</groupId>
@@ -102,13 +100,11 @@
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-yarn-api</artifactId>
-      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-common</artifactId>
-      <scope>provided</scope>
       <exclusions>
         <exclusion>
           <groupId>javax.servlet</groupId>
@@ -156,7 +152,6 @@
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-hdfs</artifactId>
-      <scope>provided</scope>
       <exclusions>
         <exclusion>
           <groupId>javax.servlet</groupId>
@@ -210,4 +205,28 @@
     </dependency>
   </dependencies>
 
+  <profiles>
+    <!-- locate yarn-site.xml here to test yarn in IDE environment -->
+    <profile>
+      <id>ide</id>
+      <build>
+        <resources>
+          <resource>
+            <directory>src/main/resources</directory>
+          </resource>
+        </resources>
+      </build>
+    </profile>
+  </profiles>
+
+  <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <includes>
+          <include>clustermanager-class</include>
+        </includes>
+      </resource>
+    </resources>
+  </build>
 </project>
