--- a/zeppelin-web/bower.json
+++ b/zeppelin-web/bower.json
@@ -5,7 +5,6 @@
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
     "bootstrap": "~3.2.0",
-    "angular": "1.5.7",
     "angular-websocket": "~1.0.13",
     "ace-builds": "1.2.7",
     "angular-ui-ace": "0.1.3",
@@ -52,7 +51,6 @@
     }
   },
   "resolutions": {
-    "ace-builds": "1.2.7",
-    "angular": ">=1.5.0 <1.6"
+    "ace-builds": "1.2.7"
   }
 }
